# ServerBMP

./: README.md
client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
server/bmp/: BMPclass.cpp  BMPclass.h
